force-app/main/default/objects/Praekula__c/Praekula__c.object-meta.xml
<CustomObject>
    <label>Präkula</label>
    <nameField>
        <displayFormat>TA-{YY}-{0}</displayFormat> 
        <startingNumber>1</startingNumber>
        <label>PräkulaID</label> 
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Präkula</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>