force-app/main/default/objects/Praekula__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account </label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Präkula</relationshipLabel>
    <relationshipName>Pr_kula</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>