force-app/main/default/objects/Praekula__c/fields/CheckPrakulaDI__c.field-meta.xml
<CustomField>
    <fullName>CheckPrakulaDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Prakula DI</label> 
    <type>Checkbox</type>
</CustomField>