force-app/main/default/objects/Praekula__c/fields/DeliveryToSAPRequested__c.field-meta.xml
<CustomField>
    <fullName>DeliveryToSAPRequested__c</fullName>
    <label>Delivery To SAP Requested? </label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>