force-app/main/default/objects/Praekula__c/fields/PrintabletoContent__c.field-meta.xml
<CustomField>
    <fullName>PrintabletoContent__c</fullName>
    <label>Printable to Content </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>