force-app/main/default/objects/Praekula__c/fields/PrintableToDescription__c.field-meta.xml
<CustomField>
    <fullName>PrintableToDescription__c</fullName>
    <label>Printable To Description </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>