force-app/main/default/objects/Praekula__c/fields/ProductManager__c.field-meta.xml
<CustomField>
    <fullName>ProductManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Pr_kula</relationshipName>
    <type>Lookup</type>
</CustomField>