force-app/main/default/objects/Praekula__c/fields/QualityManager__c.field-meta.xml
<CustomField>
    <fullName>QualityManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Manager </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Pr_kula2</relationshipName>
    <type>Lookup</type>
</CustomField>