force-app/main/default/objects/Praekula__c/fields/QualityRepresentative__c.field-meta.xml
<CustomField>
    <fullName>QualityRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Representative </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Pr_kula3</relationshipName>
    <type>Lookup</type>
</CustomField>