force-app/main/default/objects/Praekula__c/fields/SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative </label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Pr_kula1</relationshipName>
    <type>Lookup</type>
</CustomField>