force-app/main/default/objects/Praekula__c/fields/SenttoSAP__c.field-meta.xml
<CustomField>
    <fullName>SenttoSAP__c</fullName>
    <label>Sent to SAP </label> 
    <type>Date</type>
</CustomField>