force-app/main/default/objects/Praekula__c/fields/TechnicalRemarkQualityDepartment__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRemarkQualityDepartment__c</fullName>
    <label>Technical Remark Quality Department </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>