force-app/main/default/objects/Praekula__c/fields/TechnicalRemarkSales__c.field-meta.xml
<CustomField>
    <fullName>TechnicalRemarkSales__c</fullName>
    <label>Technical Remark Sales </label> 
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>