force-app/main/default/objects/Praekula__c/fields/TextForSelectionQuality__c.field-meta.xml
<CustomField>
    <fullName>TextForSelectionQuality__c</fullName>
    <label>Texts for Selection Quality Dep. </label> 
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in product portfolio</fullName>
            </value>
            <value>
                <fullName>Acceptance of Spec.</fullName>
            </value>
            <value>
                <fullName>Surface according to DIN EN ISO 9443</fullName>
            </value>
            <value>
                <fullName>Surface according to EN ISO 9443</fullName>
            </value>
            <value>
                <fullName>Upset testing</fullName>
            </value>
            <value>
                <fullName>Edge decarburization according to DIN EN ISO 3887-03</fullName>
            </value>
            <value>
                <fullName>Edge decarburization according to DIN EN 10263</fullName>
            </value>
            <value>
                <fullName>Purpose of use</fullName>
            </value>
            <value>
                <fullName>Maraform</fullName>
            </value>
            <value>
                <fullName>Standard sentence: &quot;Further customer requirements&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>