force-app/main/default/objects/Praekula__c/fields/TextForSelectionSales__c.field-meta.xml
<CustomField>
    <fullName>TextForSelectionSales__c</fullName>
    <label>Texts for Selection Sales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum order quantity (t)</fullName>
            </value>
            <value>
                <fullName>Batch size</fullName>
            </value>
            <value>
                <fullName>New admission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>