force-app/main/default/objects/Praekula__c/validationRules/Validationonstatusbasedonsalesprofile.validationRule-meta.xml
<ValidationRule>
    <fullName>Validationonstatusbasedonsalesprofile</fullName>
    <active>true</active>
    <description>the status can only be changed from New to quality check and Final check  to appoved ,quality check</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
NOT(ISNEW()),
$Profile.Name = &quot;SAG Sales&quot;,
OR(
	AND(
	ISPICKVAL(PRIORVALUE(Status__c),&quot;New&quot;),
	NOT(ISPICKVAL(Status__c,&quot;Quality Check&quot;))
	),

	AND(
	ISPICKVAL(PRIORVALUE(Status__c),&quot;Final Check&quot;),
	ISPICKVAL(Status__c,&quot;New&quot;)		     
    ),
	AND(
		ISPICKVAL(PRIORVALUE(Status__c),&quot;Quality Check&quot;),		
		NOT(ISPICKVAL(Status__c,&quot;Quality Check&quot;))
    ),
	AND(
		ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;),		
		NOT(ISPICKVAL(Status__c,&quot;Approved&quot;))
    )

)
)</errorConditionFormula>
    <errorMessage>You can only change the status from New to Quality Check, from Final Check to Approved or from Final Check back to Quality check.</errorMessage>
</ValidationRule>